--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -1,7 +1,16 @@
+# 1 Usa una imagen base ligera con JDK 17
 FROM eclipse-temurin:17-jdk-alpine
-VOLUME /tmp
-COPY *.jar apiFranchise.jar
-ENV JAVA_OPTS=" -Xshareclasses:name=cacheapp,cacheDir=/cache,nonfatal -XX:+UseContainerSupport -XX:MaxRAMPercentage=70 -Djava.security.egd=file:/dev/./urandom"
-# Replace with a non-root user to avoid running the container with excessive privileges
-USER appuser
-ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS  -jar apiFranchise.jar" ]
+
+# 2 Establece el directorio de trabajo
+WORKDIR /app
+
+# 3 Copia el archivo JAR generado desde Gradle
+COPY applications/app-service/build/libs/apiFranchise.jar apiFranchise.jar
+
+# 4 Expone el puerto en el que corre la API (ajústalo si es necesario)
+EXPOSE 8080
+
+USER root
+
+# 5 Define el comando de inicio
+ENTRYPOINT ["java", "-jar", "apiFranchise.jar"]
