--- a/.github/workflows/apifranchise_github_action_gradle.yaml
+++ b/.github/workflows/apifranchise_github_action_gradle.yaml
@@ -103,6 +103,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: ./deployment/Dockerfile.build
+          file: ./deployment/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.REPOSITORY_NAME }}:prod-${{ github.event.release.tag_name }}
