--- a/.github/workflows/apifranchise_github_action_gradle.yaml
+++ b/.github/workflows/apifranchise_github_action_gradle.yaml
@@ -78,6 +78,9 @@ jobs:
       - name: Move application.yaml file
         run: mv ${PWD}/environmentsTempFiles/application.yaml ${PWD}/applications/app-service/src/main/resources/application.yaml
 
+      - name: Print application.yaml
+        run: cat ${PWD}/applications/app-service/src/main/resources/application.yaml
+        
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
