Feature: adding Franchise update name

--- a/applications/app-service/src/main/resources/application.yaml
+++ b/applications/app-service/src/main/resources/application.yaml
@@ -29,4 +29,4 @@ adapters:
     database: "franchisesDataBase"
     schema: "franchisesSchema"
     username: "postgres"
-    password: "GaD7,%k8d$h2b5rQr("
+    password: "Pass#123#"
